added basic command options